--- a/index.html
+++ b/index.html
@@ -5591,11 +5591,11 @@ function showUpdateLocationPanel(client, addressData) {
     // Transformar botão "Adicionar Cliente" em "Atualizar Localização"
     transformAddButtonToUpdate();
 
-    // Centralizar no marcador do cliente se existir com zoom máximo
+    // Centralizar no marcador do cliente se existir com zoom 90%
     if (client.latitude && client.longitude) {
         const clientPos = { lat: client.latitude, lng: client.longitude };
         map.panTo(clientPos);
-        map.setZoom(21); // Zoom máximo de proximidade
+        map.setZoom(22); // Zoom 90% - máximo disponível
     }
 
     showToast(
