--- a/index.html
+++ b/index.html
@@ -5636,10 +5636,10 @@ function createClientInfoBanner(client) {
     banner.innerHTML = `
         <div style="flex: 1; min-width: 0;">
             <div style="font-size: 14px; font-weight: 700; margin-bottom: 4px;">
-                👤 ${client.name}
+                ${client.name}
             </div>
             <div style="font-size: 12px; opacity: 0.9; line-height: 1.3;">
-                📍 ${fullAddress}
+                ${fullAddress}
             </div>
         </div>
         <button id="btn-cancel-location-update" style="
