--- a/index.html
+++ b/index.html
@@ -254,6 +254,7 @@
         border-radius: 50%;
         box-shadow: 0 2px 6px rgba(0,0,0,0.4);
         position: relative;
+        transform: translate(-50%, -50%);
     }
 
     .location-marker::after {
