--- a/index.html
+++ b/index.html
@@ -243,41 +243,6 @@
         color: transparent;
     }
 
-    /* ===========================
-       MARCADOR DA LOCALIZAÇÃO
-       =========================== */
-    .location-marker {
-        width: 20px;
-        height: 20px;
-        background: var(--primary-color);
-        border: 3px solid white;
-        border-radius: 50%;
-        box-shadow: 0 2px 6px rgba(0,0,0,0.4);
-        position: relative;
-        transform: translate(-50%, -50%);
-    }
-
-    .location-marker::after {
-        content: '';
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
-        width: 8px;
-        height: 8px;
-        background: white;
-        border-radius: 50%;
-    }
-
-    @keyframes pulse {
-        0% { box-shadow: 0 0 0 0 rgba(66,133,244,0.7); }
-        70% { box-shadow: 0 0 0 10px rgba(66,133,244,0); }
-        100% { box-shadow: 0 0 0 0 rgba(66,133,244,0); }
-    }
-
-    .location-marker.active {
-        animation: pulse 2s infinite;
-    }
 
     /* ===========================
        SISTEMA DE NOTIFICAÇÕES
@@ -2977,31 +2942,13 @@ class GPSTracker {
         this.accuracy = position.coords.accuracy;
         this.markerCoords = coords;
 
-        const markerDiv = document.createElement('div');
-        markerDiv.className = 'location-marker active';
-
-        if (google.maps.marker && google.maps.marker.AdvancedMarkerElement) {
-            this.marker = new google.maps.marker.AdvancedMarkerElement({
-                map: map,
-                position: coords,
-                content: markerDiv,
-                title: "Sua Localização"
-            });
-        } else {
-            this.marker = new google.maps.Marker({
-                map: map,
-                position: coords,
-                title: "Sua Localização",
-                icon: {
-                    path: google.maps.SymbolPath.CIRCLE,
-                    scale: 8,
-                    fillColor: "#4285f4",
-                    fillOpacity: 1,
-                    strokeColor: "white",
-                    strokeWeight: 3
-                }
-            });
-        }
+        // Usar marcador padrão do Google Maps (azul com círculo)
+        this.marker = new google.maps.Marker({
+            map: map,
+            position: coords,
+            title: "Sua Localização"
+            // Sem ícone customizado - usa o padrão do Google Maps
+        });
 
         // Atualizar referências globais (compatibilidade)
         userLocationMarker = this.marker;
