--- a/index.html
+++ b/index.html
@@ -2942,16 +2942,34 @@ class GPSTracker {
         this.accuracy = position.coords.accuracy;
         this.markerCoords = coords;
 
-        // Não criar marcador manual - usar o marcador azul nativo do Google Maps
-        // O Google Maps já mostra a bolinha azul automaticamente
-        this.marker = {
+        // Criar marcador com estilo da bolinha azul do Google Maps
+        this.marker = new google.maps.Marker({
+            map: map,
             position: coords,
-            getPosition: () => coords,
-            setPosition: (newPos) => {
-                coords.lat = newPos.lat;
-                coords.lng = newPos.lng;
-            }
-        };
+            icon: {
+                path: google.maps.SymbolPath.CIRCLE,
+                scale: 7,
+                fillColor: '#4285F4',
+                fillOpacity: 1,
+                strokeColor: '#FFFFFF',
+                strokeWeight: 2.5
+            },
+            zIndex: 1000,
+            optimized: true
+        });
+
+        // Criar círculo de precisão (halo azul claro ao redor)
+        this.accuracyCircle = new google.maps.Circle({
+            map: map,
+            center: coords,
+            radius: position.coords.accuracy,
+            fillColor: '#4285F4',
+            fillOpacity: 0.15,
+            strokeColor: '#4285F4',
+            strokeOpacity: 0.3,
+            strokeWeight: 1,
+            zIndex: 999
+        });
 
         // Centralizar mapa na posição inicial
         map.setCenter(coords);
@@ -3050,12 +3068,14 @@ class GPSTracker {
     setMarkerPosition(position) {
         if (!this.marker) return;
 
-        // Apenas atualizar referência interna (não há marcador visual manual)
-        if (this.marker.position !== undefined) {
-            this.marker.position = position;
-        }
+        // Atualizar posição do marcador
         if (this.marker.setPosition) {
             this.marker.setPosition(position);
+        }
+
+        // Atualizar círculo de precisão
+        if (this.accuracyCircle && this.accuracyCircle.setCenter) {
+            this.accuracyCircle.setCenter(position);
         }
     }
 
