--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 <title>Mapa de Clientes - Google Maps</title>
 <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>📍</text></svg>">
 
+<!-- Material Icons - Biblioteca oficial do Google -->
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
 <style>
     :root {
         --primary-color: #4285f4;
@@ -1702,6 +1705,8 @@
         height: 40px;
         cursor: pointer;
         text-align: center;
+        /* Garante que o ícone se alinhe */
+        line-height: 40px;
         transition: background-color 0.2s ease;
     }
 
@@ -1717,18 +1722,10 @@
         background-color: #e8f0fe;
     }
 
-    .custom-my-location-icon {
-        width: 24px;
-        height: 24px;
-        background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%23757575"><path d="M12 8c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm8.94 3c-.46-4.1-3.3-7.46-7.23-8.82L12 1h-1v2.18C7.36 4.54 4.5 7.9 4.06 12H1v1h3.06c.44 3.93 3.3 7.29 7.23 8.65V23h1v-2.18c3.93-1.36 6.79-4.72 7.23-8.65H23v-1h-3.06zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"/></svg>');
-        background-repeat: no-repeat;
-        background-position: center;
-        margin-top: 8px;
-        display: inline-block;
-    }
-
-    .custom-my-location-icon.tracking {
-        background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="%234285F4"><path d="M12 8c-2.21 0-4 1.79-4 4s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm8.94 3c-.46-4.1-3.3-7.46-7.23-8.82L12 1h-1v2.18C7.36 4.54 4.5 7.9 4.06 12H1v1h3.06c.44 3.93 3.3 7.29 7.23 8.65V23h1v-2.18c3.93-1.36 6.79-4.72 7.23-8.65H23v-1h-3.06zM12 20c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"/></svg>');
+    /* Material Icons dentro do botão */
+    .custom-my-location-button .material-icons {
+        font-size: 24px;
+        vertical-align: middle;
     }
 </style>
 </head>
@@ -3409,6 +3406,7 @@ function updateStatus(text, active = true) {
 /**
  * Adiciona um controle customizado de "Minha Localização" ao mapa.
  * Implementação seguindo as diretrizes oficiais do Google Maps API.
+ * Usando Material Icons para fidelidade visual com Google Maps original.
  *
  * @param {google.maps.Map} map O objeto Google Map.
  */
@@ -3418,9 +3416,12 @@ function addMyLocationControl(map) {
     locationButton.className = "custom-my-location-button";
     locationButton.title = "Minha Localização";
 
-    const iconSpan = document.createElement("span");
-    iconSpan.className = "custom-my-location-icon";
-    locationButton.appendChild(iconSpan);
+    // Cria o elemento i para o Material Icon
+    const iconElement = document.createElement("i");
+    iconElement.className = "material-icons";
+    iconElement.style.color = "#757575"; // Cor cinza (padrão do Google Maps)
+    iconElement.textContent = "my_location"; // Nome do Ícone: my_location
+    locationButton.appendChild(iconElement);
 
     // Variável para rastrear estado de seguimento
     let isFollowingLocation = false;
@@ -3434,10 +3435,10 @@ function addMyLocationControl(map) {
                 map.setCenter(markerCoords);
                 map.setZoom(17);
 
-                // Ativar modo de seguimento
+                // Ativar modo de seguimento - mudar cor do ícone para azul
                 isFollowingLocation = true;
                 locationButton.classList.add('active');
-                iconSpan.classList.add('tracking');
+                iconElement.style.color = "#4285F4"; // Azul Google quando ativo
 
                 showToast('📍 Localização', 'Mapa centralizado na sua posição', 'info', 2000);
             } else {
@@ -3453,10 +3454,10 @@ function addMyLocationControl(map) {
                         map.setCenter(pos);
                         map.setZoom(17);
 
-                        // Ativar modo de seguimento
+                        // Ativar modo de seguimento - mudar cor do ícone para azul
                         isFollowingLocation = true;
                         locationButton.classList.add('active');
-                        iconSpan.classList.add('tracking');
+                        iconElement.style.color = "#4285F4"; // Azul Google quando ativo
 
                         showToast('📍 Localização', 'Posição encontrada', 'success', 2000);
                     },
@@ -3482,7 +3483,7 @@ function addMyLocationControl(map) {
         if (isFollowingLocation) {
             isFollowingLocation = false;
             locationButton.classList.remove('active');
-            iconSpan.classList.remove('tracking');
+            iconElement.style.color = "#757575"; // Voltar para cinza quando inativo
         }
     });
 
