--- a/index.html
+++ b/index.html
@@ -1708,6 +1708,8 @@
         /* Garante que o ícone se alinhe */
         line-height: 40px;
         transition: background-color 0.2s ease;
+        /* Garante que fique acima de outros elementos do mapa */
+        z-index: 10;
     }
 
     .custom-my-location-button:hover {
@@ -2640,6 +2642,102 @@ let navigationMode = {
     followInterval: null
 };
 
+// ===========================
+// FUNÇÃO PARA CALCULAR E DESENHAR ROTA (Padrão Google Maps API)
+// Implementação seguindo as diretrizes oficiais do Google Gemini
+// ===========================
+
+/**
+ * Calcula e desenha a rota entre dois pontos no mapa.
+ * Usa DirectionsService para calcular e DirectionsRenderer para desenhar.
+ *
+ * @param {Object|string} origin Ponto de partida (coordenadas {lat, lng} ou endereço string).
+ * @param {Object|string} destination Ponto de chegada (coordenadas {lat, lng} ou endereço string).
+ * @param {string} travelMode Modo de viagem ('DRIVING', 'WALKING', 'TRANSIT', 'BICYCLING').
+ * @returns {Promise} Promise com informações da rota ou erro.
+ */
+function calculateAndDisplayRoute(origin, destination, travelMode = 'DRIVING') {
+    return new Promise((resolve, reject) => {
+        // Verificar se o directionsService e directionsRenderer estão inicializados
+        if (!directionsService || !directionsRenderer) {
+            console.error('❌ DirectionsService ou DirectionsRenderer não inicializados');
+            reject(new Error('Serviço de rotas não disponível'));
+            return;
+        }
+
+        // 1. Configurar a requisição de rota
+        const request = {
+            origin: origin,
+            destination: destination,
+            travelMode: google.maps.TravelMode[travelMode],
+            language: 'pt-BR',
+            region: 'BR'
+        };
+
+        console.log('🧭 Calculando rota:', { origin, destination, travelMode });
+
+        // 2. Chamar o serviço de rotas
+        directionsService.route(request, (response, status) => {
+            if (status === 'OK') {
+                // Se o cálculo da rota for bem-sucedido
+                console.log('✅ Rota calculada com sucesso!');
+
+                // 3. Garantir que o DirectionsRenderer está conectado ao mapa
+                if (!directionsRenderer.getMap()) {
+                    directionsRenderer.setMap(map);
+                }
+
+                // 4. Desenhar a rota azul no mapa
+                directionsRenderer.setDirections(response);
+
+                // A linha azul é desenhada automaticamente pelo DirectionsRenderer!
+
+                // Extrair informações da rota
+                const route = response.routes[0];
+                const leg = route.legs[0];
+
+                const routeInfo = {
+                    distance: leg.distance,
+                    duration: leg.duration,
+                    startAddress: leg.start_address,
+                    endAddress: leg.end_address,
+                    steps: leg.steps
+                };
+
+                console.log('📏 Distância:', leg.distance.text);
+                console.log('⏱️ Tempo estimado:', leg.duration.text);
+
+                resolve(routeInfo);
+            } else {
+                // Se houver erro (ex: destino inacessível)
+                console.error('❌ Falha ao calcular a rota. Status:', status);
+                reject(new Error(`Falha ao calcular rota: ${status}`));
+            }
+        });
+    });
+}
+
+/**
+ * Limpa a rota atual do mapa.
+ */
+function clearRoute() {
+    if (directionsRenderer) {
+        directionsRenderer.setDirections({ routes: [] });
+        directionsRenderer.setMap(null);
+        console.log('🗑️ Rota limpa do mapa');
+    }
+
+    // Também limpar polylines manuais se existirem
+    if (window.routePolylines && window.routePolylines.length > 0) {
+        window.routePolylines.forEach(polyline => {
+            if (polyline && polyline.setMap) {
+                polyline.setMap(null);
+            }
+        });
+        window.routePolylines = [];
+    }
+}
+
 // Calcular heading (direção) entre duas posições
 function calculateHeading(from, to) {
     const lat1 = from.lat * Math.PI / 180;
@@ -2741,15 +2839,8 @@ function stopNavigationMode() {
         btnAddClient.style.display = 'flex';
     }
 
-    // Limpar linha azul do trajeto
-    if (window.routePolylines && window.routePolylines.length > 0) {
-        window.routePolylines.forEach(polyline => {
-            if (polyline && polyline.setMap) {
-                polyline.setMap(null);
-            }
-        });
-        window.routePolylines = [];
-    }
+    // Limpar linha azul do trajeto usando a função padrão
+    clearRoute();
 
     // Resetar rotação e inclinação do mapa
     if (map) {
@@ -3405,7 +3496,8 @@ function updateStatus(text, active = true) {
 
 /**
  * Adiciona um controle customizado de "Minha Localização" ao mapa.
- * Implementação seguindo as diretrizes oficiais do Google Maps API.
+ * Implementação seguindo as diretrizes oficiais do Google Maps API (Google Gemini).
+ * Integrado com o sistema de cálculo de rotas.
  * Usando Material Icons para fidelidade visual com Google Maps original.
  *
  * @param {google.maps.Map} map O objeto Google Map.
@@ -3430,48 +3522,60 @@ function addMyLocationControl(map) {
     locationButton.addEventListener("click", () => {
         // Verifica se o navegador suporta a Geolocation API
         if (navigator.geolocation) {
-            // Se já tem marcador de localização, centraliza nele
-            if (userLocationMarker && markerCoords && markerCoords.lat !== 0) {
-                map.setCenter(markerCoords);
-                map.setZoom(17);
+            // Tenta obter a localização do usuário
+            navigator.geolocation.getCurrentPosition(
+                (position) => {
+                    const pos = {
+                        lat: position.coords.latitude,
+                        lng: position.coords.longitude,
+                    };
 
-                // Ativar modo de seguimento - mudar cor do ícone para azul
-                isFollowingLocation = true;
-                locationButton.classList.add('active');
-                iconElement.style.color = "#4285F4"; // Azul Google quando ativo
+                    // A. Centraliza o mapa na localização do usuário
+                    map.setCenter(pos);
+                    map.setZoom(17);
 
-                showToast('📍 Localização', 'Mapa centralizado na sua posição', 'info', 2000);
-            } else {
-                // Ainda não tem localização, solicitar uma nova
-                navigator.geolocation.getCurrentPosition(
-                    (position) => {
-                        const pos = {
-                            lat: position.coords.latitude,
-                            lng: position.coords.longitude,
-                        };
+                    // B. Ativar modo de seguimento - mudar cor do ícone para azul
+                    isFollowingLocation = true;
+                    locationButton.classList.add('active');
+                    iconElement.style.color = "#4285F4"; // Azul Google quando ativo
 
-                        // Centraliza o mapa na localização do usuário
-                        map.setCenter(pos);
-                        map.setZoom(17);
+                    // C. Se há navegação ativa, recalcular rota a partir da nova posição
+                    if (navigationMode.active && navigationMode.destination) {
+                        console.log('🔄 Recalculando rota a partir da nova posição...');
 
-                        // Ativar modo de seguimento - mudar cor do ícone para azul
-                        isFollowingLocation = true;
-                        locationButton.classList.add('active');
-                        iconElement.style.color = "#4285F4"; // Azul Google quando ativo
+                        // Limpar rota anterior
+                        if (directionsRenderer) {
+                            directionsRenderer.setDirections({ routes: [] });
+                        }
 
-                        showToast('📍 Localização', 'Posição encontrada', 'success', 2000);
-                    },
-                    (error) => {
-                        // Função de erro (se o usuário negar ou se houver um problema)
-                        handleLocationError(true, error);
-                    },
-                    {
-                        enableHighAccuracy: true,
-                        timeout: 10000,
-                        maximumAge: 0
+                        // Calcular e exibir nova rota
+                        calculateAndDisplayRoute(pos, navigationMode.destination, 'DRIVING')
+                            .then((routeInfo) => {
+                                showToast(
+                                    '🔄 Rota atualizada',
+                                    `📏 ${routeInfo.distance.text} • ⏱️ ${routeInfo.duration.text}`,
+                                    'success',
+                                    3000
+                                );
+                            })
+                            .catch((error) => {
+                                console.error('Erro ao recalcular rota:', error);
+                                showToast('❌ Erro', 'Não foi possível recalcular a rota', 'error', 3000);
+                            });
+                    } else {
+                        showToast('📍 Localização', 'Mapa centralizado na sua posição', 'info', 2000);
                     }
-                );
-            }
+                },
+                (error) => {
+                    // Função de erro (se o usuário negar ou se houver um problema)
+                    handleLocationError(true, error);
+                },
+                {
+                    enableHighAccuracy: true,
+                    timeout: 10000,
+                    maximumAge: 0
+                }
+            );
         } else {
             // O navegador não suporta Geolocation
             handleLocationError(false, null);
@@ -3493,11 +3597,12 @@ function addMyLocationControl(map) {
 
 /**
  * Função para lidar com erros de localização
+ * Implementação seguindo padrão Google Gemini
  */
 function handleLocationError(browserHasGeolocation, error) {
     const errorMessage = browserHasGeolocation
-        ? `Erro: O serviço de geolocalização falhou. ${error ? error.message : ''}`
-        : "Erro: Seu navegador não suporta geolocalização.";
+        ? `O serviço de geolocalização falhou. ${error ? error.message : ''}`
+        : "Seu navegador não suporta geolocalização.";
 
     showToast('❌ Erro de Localização', errorMessage, 'error', 5000);
     console.error('Erro de geolocalização:', errorMessage);
@@ -3580,8 +3685,36 @@ window.initMap = function () {
 // RASTREAMENTO EM TEMPO REAL
 // ===========================
 
+// Diagnóstico detalhado da Geolocation API
+function runGeolocationDiagnostics() {
+    console.log('🔍 [DIAGNÓSTICO] Verificando Geolocation API...');
+
+    // Verificar suporte à Geolocation API
+    if ('geolocation' in navigator) {
+        console.log('✅ Geolocation API suportada');
+
+        // Testar se consegue obter posição
+        navigator.geolocation.getCurrentPosition(
+            (pos) => {
+                console.log('✅ GPS funcionando!');
+                console.log(`📍 Lat: ${pos.coords.latitude}`);
+                console.log(`📍 Lng: ${pos.coords.longitude}`);
+                console.log(`🎯 Precisão: ${pos.coords.accuracy}m`);
+            },
+            (error) => {
+                console.error('❌ Erro GPS:', error.message);
+            }
+        );
+    } else {
+        console.error('❌ Geolocation API NÃO suportada');
+    }
+}
+
 async function startLocationTracking() {
     console.log('✅ [MODULAR] Iniciando GPS Tracker...');
+
+    // Executar diagnóstico antes de iniciar o rastreamento
+    runGeolocationDiagnostics();
 
     try {
         // Criar instância do GPS Tracker modular
@@ -6911,76 +7044,35 @@ async function navigateToClient(client, marker = null, infoWindow = null) {
     );
 
     try {
-        // Usar Directions API para rota ponto-a-ponto
-        const directionsService = new google.maps.DirectionsService();
+        // Limpar rotas anteriores antes de calcular nova
+        clearRoute();
 
-        const request = {
-            origin: userPosition,
-            destination: destination,
-            travelMode: google.maps.TravelMode.DRIVING,
-            optimizeWaypoints: false,
-            language: 'pt-BR',
-            region: 'BR'
-        };
+        // Usar a função calculateAndDisplayRoute (padrão Google Maps API - Gemini)
+        // O DirectionsRenderer desenha automaticamente a linha azul e os marcadores
+        const routeInfo = await calculateAndDisplayRoute(userPosition, destination, 'DRIVING');
 
-        const result = await directionsService.route(request);
+        // Ajustar mapa para mostrar toda a rota
+        const bounds = new google.maps.LatLngBounds();
+        bounds.extend(userPosition);
+        bounds.extend(destination);
+        map.fitBounds(bounds);
 
-        if (result.status === 'OK') {
-            // Limpar rotas antigas
-            if (window.routePolylines && window.routePolylines.length > 0) {
-                window.routePolylines.forEach(polyline => {
-                    if (polyline.setMap) {
-                        polyline.setMap(null);
-                    }
-                });
-                window.routePolylines = [];
-            }
+        // Exibir informações da rota
+        showToast(
+            `🎯 Rota para ${client.name}`,
+            `📏 Distância: ${routeInfo.distance.text}\n⏱️ Tempo estimado: ${routeInfo.duration.text}`,
+            'success',
+            5000
+        );
 
-            // Desenhar nova rota
-            const route = result.routes[0];
-            const leg = route.legs[0];
+        console.log('✅ Rota calculada:', {
+            distance: routeInfo.distance,
+            duration: routeInfo.duration,
+            steps: routeInfo.steps.length
+        });
 
-            // Criar polyline para a rota
-            const polyline = new google.maps.Polyline({
-                path: route.overview_path,
-                geodesic: true,
-                strokeColor: '#4285f4',
-                strokeOpacity: 0.8,
-                strokeWeight: 5,
-                map: map
-            });
-
-            window.routePolylines = [polyline];
-
-            // Ajustar mapa para mostrar toda a rota
-            const bounds = new google.maps.LatLngBounds();
-            bounds.extend(userPosition);
-            bounds.extend(destination);
-            map.fitBounds(bounds);
-
-            // Formatar distância e duração
-            const distance = leg.distance.text;
-            const duration = leg.duration.text;
-
-            showToast(
-                `🎯 Rota para ${client.name}`,
-                `📏 Distância: ${distance}\n⏱️ Tempo estimado: ${duration}`,
-                'success',
-                5000
-            );
-
-            console.log('✅ Rota calculada:', {
-                distance: leg.distance,
-                duration: leg.duration,
-                steps: leg.steps.length
-            });
-
-            // Iniciar modo de navegação em tempo real
-            startNavigationMode(destination, client.name, marker, infoWindow);
-
-        } else {
-            throw new Error(`Directions API retornou status: ${result.status}`);
-        }
+        // Iniciar modo de navegação em tempo real
+        startNavigationMode(destination, client.name, marker, infoWindow);
 
     } catch (error) {
         console.error('Erro ao calcular rota:', error);
